--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="logo.png" type="image/png" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -14,8 +17,9 @@
       color: #333;
     }
     h1 {
-      text-align: center;
-      color: #2c3e50;
+      font-family: "Hind Siliguri", sans-serif;
+      font-weight: 600;
+      font-style: normal;
     }
     .container {
       max-width: 600px;
@@ -57,7 +61,7 @@
   </style>
 </head>
 <body>
-  <h1>Trip Cost Splitter</h1>
+  <h1>ভাড়া কত 😁</h1>
   <div class="container">
     <div>
       <h3>Enter Amount Paid (Tk)</h3>
