--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       font-family: "Hind Siliguri", sans-serif;
       font-weight: 600;
       font-style: normal;
+      text-align: center;
+      color: #2c3e50;
     }
     .container {
       max-width: 600px;
