--- a/index.html
+++ b/index.html
@@ -10,56 +10,95 @@
   <title>Vara Koto 😁</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f4f8fb;
-      margin: 0;
-      padding: 20px;
-      color: #333;
-    }
-    h1 {
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(135deg, #6e8efb, #a777e3);
+  margin: 0;
+  padding: 40px 20px;
+  color: #333;
+}
+
+ h1 {
       font-family: "Hind Siliguri", sans-serif;
       font-weight: 600;
       font-style: normal;
       text-align: center;
       color: #2c3e50;
     }
-    .container {
-      max-width: 600px;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-    }
-    input[type="number"] {
-      width: 80px;
-      padding: 6px;
-      margin-right: 10px;
-    }
-    .person {
-      margin: 10px 0;
-    }
-    button {
-      background-color: #3498db;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    button:hover {
-      background-color: #2980b9;
-    }
-    .result {
-      margin-top: 20px;
-      background: #ecf0f1;
-      padding: 15px;
-      border-radius: 10px;
-    }
-    pre {
-      white-space: pre-wrap;
-    }
+
+.container {
+  max-width: 700px;
+  margin: auto;
+  background: #fff;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+}
+
+.container h3 {
+  margin-bottom: 20px;
+  color: #2c3e50;
+  border-left: 5px solid #6e8efb;
+  padding-left: 10px;
+}
+
+.person {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 15px;
+  margin-bottom: 20px;
+}
+
+.person label {
+  flex: 1 1 45%;
+  font-weight: 500;
+}
+
+input[type="number"],
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  margin-top: 6px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-sizing: border-box;
+  font-size: 15px;
+  transition: border 0.2s ease;
+}
+
+input:focus {
+  border-color: #6e8efb;
+  outline: none;
+}
+
+button {
+  background: linear-gradient(to right, #6e8efb, #a777e3);
+  color: white;
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+button:hover {
+  background: linear-gradient(to right, #5d7df5, #9e67dc);
+}
+
+.result {
+  margin-top: 30px;
+  background: #f9f9f9;
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 15px;
+  line-height: 1.6;
+  white-space: pre-wrap;
+}
   </style>
 </head>
 <body>
