--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       font-weight: 600;
       font-style: normal;
       text-align: center;
-      color: #2c3e50;
+      color: #ffffff;
     }
 
 .container {
