--- a/index.html
+++ b/index.html
@@ -10,147 +10,184 @@
   <title>Vara Koto 😁</title>
   <style>
     body {
-  font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(135deg, #6e8efb, #a777e3);
-  margin: 0;
-  padding: 40px 20px;
-  color: #333;
-}
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #6e8efb, #a777e3);
+      margin: 0;
+      padding: 40px 20px;
+      color: #333;
+    }
 
- h1 {
+    h1 {
       font-family: "Hind Siliguri", sans-serif;
       font-weight: 600;
-      font-style: normal;
       text-align: center;
       color: #ffffff;
     }
 
-.container {
-  max-width: 700px;
-  margin: auto;
-  background: #fff;
-  padding: 30px;
-  border-radius: 12px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-}
+    .container {
+      max-width: 700px;
+      margin: auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+    }
 
-.container h3 {
-  margin-bottom: 20px;
-  color: #2c3e50;
-  border-left: 5px solid #6e8efb;
-  padding-left: 10px;
-}
+    .container h3 {
+      margin-bottom: 20px;
+      color: #2c3e50;
+      border-left: 5px solid #6e8efb;
+      padding-left: 10px;
+    }
 
-.person {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 15px;
-  margin-bottom: 20px;
-}
+    .person {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 10px;
+      margin-bottom: 10px;
+    }
 
-.person label {
-  flex: 1 1 45%;
-  font-weight: 500;
-}
+    .person label {
+      flex: 1 1 45%;
+      font-weight: 500;
+    }
 
-input[type="number"],
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-  width: 100%;
-  padding: 10px;
-  margin-top: 6px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  box-sizing: border-box;
-  font-size: 15px;
-  transition: border 0.2s ease;
-}
+    input[type="number"],
+    input[type="text"] {
+      width: 100%;
+      padding: 8px;
+      margin-top: 4px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 14px;
+    }
 
-input:focus {
-  border-color: #6e8efb;
-  outline: none;
-}
+    .remove-btn {
+      background: #ff4d4d;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 5px 10px;
+      cursor: pointer;
+      font-size: 12px;
+    }
 
-button {
-  background: linear-gradient(to right, #6e8efb, #a777e3);
-  color: white;
-  width: 100%;
-  padding: 12px;
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background 0.3s ease;
-}
+    .remove-btn:hover {
+      background: #e60000;
+    }
 
-button:hover {
-  background: linear-gradient(to right, #5d7df5, #9e67dc);
-}
+    .action-btn {
+      background: linear-gradient(to right, #6e8efb, #a777e3);
+      color: white;
+      width: 100%;
+      padding: 10px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      margin-top: 10px;
+    }
 
-.result {
-  margin-top: 30px;
-  background: #f9f9f9;
-  padding: 20px;
-  border-radius: 10px;
-  font-size: 15px;
-  line-height: 1.6;
-  white-space: pre-wrap;
-}
+    .action-btn:hover {
+      background: linear-gradient(to right, #5d7df5, #9e67dc);
+    }
+
+    .result {
+      margin-top: 20px;
+      background: #f9f9f9;
+      padding: 15px;
+      border-radius: 8px;
+      font-size: 14px;
+      white-space: pre-wrap;
+    }
   </style>
 </head>
 <body>
   <h1>ভাড়া কত 😁</h1>
   <div class="container">
-    <div>
-      <h3>Enter Amount Paid (Tk)</h3>
-      <div class="person">
-        <label>Jonaid (Going): <input type="number" id="jonaidGoing" value="0" /></label>
-        <label>Returning: <input type="number" id="jonaidReturn" value="0" /></label>
+    <h3>Enter Amount Paid (Tk)</h3>
+    <div id="friendList">
+      <!-- Default Friends -->
+      <div class="person" data-name="Sifat">
+        <label>Sifat (Going): <input type="number" value="0" class="going" /></label>
+        <label>Returning: <input type="number" value="0" class="returning" /></label>
+        <button class="remove-btn" onclick="removeFriend(this)">Remove</button>
       </div>
-      <div class="person">
-        <label>Kawser (Going): <input type="number" id="kawserGoing" value="0" /></label>
-        <label>Returning: <input type="number" id="kawserReturn" value="0" /></label>
+      <div class="person" data-name="Kawsar">
+        <label>Kawsar (Going): <input type="number" value="0" class="going" /></label>
+        <label>Returning: <input type="number" value="0" class="returning" /></label>
+        <button class="remove-btn" onclick="removeFriend(this)">Remove</button>
       </div>
-      <div class="person">
-        <label>Sifat (Going): <input type="number" id="sifatGoing" value="0" /></label>
-        <label>Returning: <input type="number" id="sifatReturn" value="0" /></label>
+      <div class="person" data-name="Jonaid">
+        <label>Jonaid (Going): <input type="number" value="0" class="going" /></label>
+        <label>Returning: <input type="number" value="0" class="returning" /></label>
+        <button class="remove-btn" onclick="removeFriend(this)">Remove</button>
       </div>
-      <div class="person">
-        <label>Rakib (Going): <input type="number" id="rakibGoing" value="0" /></label>
-        <label>Returning: <input type="number" id="rakibReturn" value="0" /></label>
+      <div class="person" data-name="Rakib">
+        <label>Rakib (Going): <input type="number" value="0" class="going" /></label>
+        <label>Returning: <input type="number" value="0" class="returning" /></label>
+        <button class="remove-btn" onclick="removeFriend(this)">Remove</button>
+      </div>
+      <div class="person" data-name="Abir">
+        <label>Abir (Going): <input type="number" value="0" class="going" /></label>
+        <label>Returning: <input type="number" value="0" class="returning" /></label>
+        <button class="remove-btn" onclick="removeFriend(this)">Remove</button>
       </div>
     </div>
-    <button onclick="calculate()">Calculate</button>
+
+    <button class="action-btn" onclick="addFriend()">+ Add Friend</button>
+    <button class="action-btn" onclick="calculate()">Calculate</button>
+
     <div class="result" id="output"></div>
   </div>
 
   <script>
+    function addFriend() {
+      const friendList = document.getElementById('friendList');
+      const friendName = prompt("Enter friend's name:");
+      if (friendName && friendName.trim() !== "") {
+        const div = document.createElement('div');
+        div.className = 'person';
+        div.dataset.name = friendName;
+        div.innerHTML = `
+          <label>${friendName} (Going): <input type="number" value="0" class="going" /></label>
+          <label>Returning: <input type="number" value="0" class="returning" /></label>
+          <button class="remove-btn" onclick="removeFriend(this)">Remove</button>
+        `;
+        friendList.appendChild(div);
+      }
+    }
+
+    function removeFriend(button) {
+      button.parentElement.remove();
+    }
+
     function calculate() {
-      const names = ["Jonaid", "Kawser", "Sifat", "Rakib"];
-      const paid = [
-        +document.getElementById("jonaidGoing").value + +document.getElementById("jonaidReturn").value,
-        +document.getElementById("kawserGoing").value + +document.getElementById("kawserReturn").value,
-        +document.getElementById("sifatGoing").value + +document.getElementById("sifatReturn").value,
-        +document.getElementById("rakibGoing").value + +document.getElementById("rakibReturn").value
-      ];
+      const friends = document.querySelectorAll('#friendList .person');
+      let names = [];
+      let paid = [];
+      friends.forEach(friend => {
+        const name = friend.dataset.name;
+        const going = +friend.querySelector('.going').value;
+        const returning = +friend.querySelector('.returning').value;
+        names.push(name);
+        paid.push(going + returning);
+      });
 
       const total = paid.reduce((sum, val) => sum + val, 0);
-      const share = total / 4;
+      const share = total / paid.length;
       const balance = paid.map(p => +(p - share).toFixed(2));
 
       let result = `Total Cost: ${total} Tk\nEach Should Pay: ${share.toFixed(2)} Tk\n\n`;
-
-      for (let i = 0; i < 4; i++) {
+      for (let i = 0; i < names.length; i++) {
         result += `${names[i]} paid: ${paid[i]} Tk → balance: ${balance[i] >= 0 ? '+' : ''}${balance[i]} Tk\n`;
       }
 
       result += `\nSuggested Payments:\n`;
-
       let owes = [], gets = [];
-      for (let i = 0; i < 4; i++) {
+      for (let i = 0; i < names.length; i++) {
         if (balance[i] < -0.01) owes.push({i, amt: -balance[i]});
         else if (balance[i] > 0.01) gets.push({i, amt: balance[i]});
       }
@@ -168,7 +205,7 @@ button:hover {
         if (receiver.amt < 0.01) gets.shift();
       }
 
-      document.getElementById("output").innerHTML = `<pre>${result}</pre>`;
+      document.getElementById('output').innerHTML = `<pre>${result}</pre>`;
     }
   </script>
 </body>
